# tomato-vpn-switcher

./: .gitignore  Info.plist  README.md  app-icon.icns  app.py  config.example.json  gui.py  pyproject.toml  serve.py  setup.py
static/css/: main.css
templates/: base.html  error.html  index.html  success.html
