[tool.poetry]
name = "tomato-vpn-switcher"
version = "0.1.0"
description = "A web service to switch OpenVPN servers on a Tomato-based router"
authors = ["Reyn Alpha <reynalpha@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
